# e2ee-sdk

./: .gitignore  Cargo.toml  Makefile  README.md  e2ee_sdk.h
android-sdk/: settings.gradle.kts
android-sdk/gradle/wrapper/: gradle-wrapper.properties
android-sdk/mylibrary/: build.gradle.kts
android-sdk/mylibrary/src/androidTest/java/com/x/e2ee/: ExampleInstrumentedTest.kt
android/gradle/: libs.versions.toml
android/mylibrary/: .gitignore
android/mylibrary/src/main/java/com/x/e2ee/: CryptoSDK.java  Encryptor.java
android/mylibrary/src/test/java/com/x/e2ee/: ExampleUnitTest.kt
java/: Encryptor.java
src/: encyptor.rs  lib.rs  main.rs
