[package]
name = "e2ee-sdk"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.8.5"
rsa = "0.9.6"
hex = "0.4.3"
jni = "0.19.0"
libc = "0.2.158"
clap = { version = "4.0", features = ["derive"] } # For CLI argument parsing

[lib]
crate-type = ["cdylib", "rlib"]
